VLangCherry/server/internal/parser/vlangcherry_parser.go
// Code generated from VLangCherry.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // VLangCherry
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type VLangCherryParser struct {
	*antlr.BaseParser
}

var VLangCherryParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func vlangcherryParserInit() {
	staticData := &VLangCherryParserStaticData
	staticData.LiteralNames = []string{
		"", "'mut'", "'struct'", "'func'", "'if'", "'else'", "'switch'", "'case'",
		"'default'", "'for'", "'in'", "'break'", "'continue'", "'return'", "'nil'",
		"'true'", "'false'", "'int'", "'float64'", "'string'", "'bool'", "'rune'",
		"'+='", "'-='", "'++'", "'--'", "':='", "'=='", "'!='", "'<='", "'>='",
		"'&&'", "'||'", "'<'", "'>'", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'",
		"'='", "'('", "')'", "'['", "']'", "'{'", "'}'", "','", "'.'", "':'",
		"';'",
	}
	staticData.SymbolicNames = []string{
		"", "MUT", "STRUCT", "FUNC", "IF", "ELSE", "SWITCH", "CASE", "DEFAULT",
		"FOR", "IN", "BREAK", "CONTINUE", "RETURN", "NIL", "TRUE", "FALSE",
		"TIPO_INT", "TIPO_FLOAT", "TIPO_STRING", "TIPO_BOOL", "TIPO_RUNE", "MASIGUAL",
		"MENOSIGUAL", "INCREMENTO", "DECREMENTO", "ASIGNAINFERIDA", "IGUAL",
		"DIFERENTE", "MENORIGUAL", "MAYORIGUAL", "Y", "O", "MENOR", "MAYOR",
		"MAS", "MENOS", "POR", "DIV", "MODULO", "NOT", "ASIGNA", "PARIZQ", "PARDER",
		"CORIZQ", "CORDER", "LLAIZQ", "LLADER", "COMA", "PUNTO", "DOSPUNTOS",
		"PUNTOCOMA", "ID", "ENTERO", "DECIMAL", "CADENA", "RUNE", "COMENTARIO_LINEA",
		"COMENTARIO_BLOQUE", "WS",
	}
	staticData.RuleNames = []string{
		"programa", "declaracionGlobal", "declaracionStruct", "campoStruct",
		"declaracionFuncion", "receptor", "listaParametros", "parametro", "tipo",
		"tipoPrimitivo", "tipoSlice", "bloque", "sentencia", "declaracionVariable",
		"asignacion", "lugar", "incrementoDecremento", "sentenciaIf", "sentenciaSwitch",
		"casoSwitch", "defaultSwitch", "sentenciaFor", "forInit", "forActualizacion",
		"expr", "listaArgumentos", "literalSlice", "filaSlice", "literalStruct",
		"campoValor", "literal",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// VLangCherryParserInit initializes any static state used to implement VLangCherryParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewVLangCherryParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func VLangCherryParserInit() {
	staticData := &VLangCherryParserStaticData
	staticData.once.Do(vlangcherryParserInit)
}

// NewVLangCherryParser produces a new parser instance for the optional input antlr.TokenStream.
func NewVLangCherryParser(input antlr.TokenStream) *VLangCherryParser {
	VLangCherryParserInit()
	this := new(VLangCherryParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &VLangCherryParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "VLangCherry.g4"

	return this
}

// VLangCherryParser tokens.
const (
	VLangCherryParserEOF               = antlr.TokenEOF
	VLangCherryParserMUT               = 1
	VLangCherryParserSTRUCT            = 2
	VLangCherryParserFUNC              = 3
	VLangCherryParserIF                = 4
	VLangCherryParserELSE              = 5
	VLangCherryParserSWITCH            = 6
	VLangCherryParserCASE              = 7
	VLangCherryParserDEFAULT           = 8
	VLangCherryParserFOR               = 9
	VLangCherryParserIN                = 10
	VLangCherryParserBREAK             = 11
	VLangCherryParserCONTINUE          = 12
	VLangCherryParserRETURN            = 13
	VLangCherryParserNIL               = 14
	VLangCherryParserTRUE              = 15
	VLangCherryParserFALSE             = 16
	VLangCherryParserTIPO_INT          = 17
	VLangCherryParserTIPO_FLOAT        = 18
	VLangCherryParserTIPO_STRING       = 19
	VLangCherryParserTIPO_BOOL         = 20
	VLangCherryParserTIPO_RUNE         = 21
	VLangCherryParserMASIGUAL          = 22
	VLangCherryParserMENOSIGUAL        = 23
	VLangCherryParserINCREMENTO        = 24
	VLangCherryParserDECREMENTO        = 25
	VLangCherryParserASIGNAINFERIDA    = 26
	VLangCherryParserIGUAL             = 27
	VLangCherryParserDIFERENTE         = 28
	VLangCherryParserMENORIGUAL        = 29
	VLangCherryParserMAYORIGUAL        = 30
	VLangCherryParserY                 = 31
	VLangCherryParserO                 = 32
	VLangCherryParserMENOR             = 33
	VLangCherryParserMAYOR             = 34
	VLangCherryParserMAS               = 35
	VLangCherryParserMENOS             = 36
	VLangCherryParserPOR               = 37
	VLangCherryParserDIV               = 38
	VLangCherryParserMODULO            = 39
	VLangCherryParserNOT               = 40
	VLangCherryParserASIGNA            = 41
	VLangCherryParserPARIZQ            = 42
	VLangCherryParserPARDER            = 43
	VLangCherryParserCORIZQ            = 44
	VLangCherryParserCORDER            = 45
	VLangCherryParserLLAIZQ            = 46
	VLangCherryParserLLADER            = 47
	VLangCherryParserCOMA              = 48
	VLangCherryParserPUNTO             = 49
	VLangCherryParserDOSPUNTOS         = 50
	VLangCherryParserPUNTOCOMA         = 51
	VLangCherryParserID                = 52
	VLangCherryParserENTERO            = 53
	VLangCherryParserDECIMAL           = 54
	VLangCherryParserCADENA            = 55
	VLangCherryParserRUNE              = 56
	VLangCherryParserCOMENTARIO_LINEA  = 57
	VLangCherryParserCOMENTARIO_BLOQUE = 58
	VLangCherryParserWS                = 59
)

// VLangCherryParser rules.
const (
	VLangCherryParserRULE_programa             = 0
	VLangCherryParserRULE_declaracionGlobal    = 1
	VLangCherryParserRULE_declaracionStruct    = 2
	VLangCherryParserRULE_campoStruct          = 3
	VLangCherryParserRULE_declaracionFuncion   = 4
	VLangCherryParserRULE_receptor             = 5
	VLangCherryParserRULE_listaParametros      = 6
	VLangCherryParserRULE_parametro            = 7
	VLangCherryParserRULE_tipo                 = 8
	VLangCherryParserRULE_tipoPrimitivo        = 9
	VLangCherryParserRULE_tipoSlice            = 10
	VLangCherryParserRULE_bloque               = 11
	VLangCherryParserRULE_sentencia            = 12
	VLangCherryParserRULE_declaracionVariable  = 13
	VLangCherryParserRULE_asignacion           = 14
	VLangCherryParserRULE_lugar                = 15
	VLangCherryParserRULE_incrementoDecremento = 16
	VLangCherryParserRULE_sentenciaIf          = 17
	VLangCherryParserRULE_sentenciaSwitch      = 18
	VLangCherryParserRULE_casoSwitch           = 19
	VLangCherryParserRULE_defaultSwitch        = 20
	VLangCherryParserRULE_sentenciaFor         = 21
	VLangCherryParserRULE_forInit              = 22
	VLangCherryParserRULE_forActualizacion     = 23
	VLangCherryParserRULE_expr                 = 24
	VLangCherryParserRULE_listaArgumentos      = 25
	VLangCherryParserRULE_literalSlice         = 26
	VLangCherryParserRULE_filaSlice            = 27
	VLangCherryParserRULE_literalStruct        = 28
	VLangCherryParserRULE_campoValor           = 29
	VLangCherryParserRULE_literal              = 30
)

// IProgramaContext is an interface to support dynamic dispatch.
type IProgramaContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllDeclaracionGlobal() []IDeclaracionGlobalContext
	DeclaracionGlobal(i int) IDeclaracionGlobalContext

	// IsProgramaContext differentiates from other interfaces.
	IsProgramaContext()
}

type ProgramaContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramaContext() *ProgramaContext {
	var p = new(ProgramaContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = VLangCherryParserRULE_programa
	return p
}

func InitEmptyProgramaContext(p *ProgramaContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = VLangCherryParserRULE_programa
}

func (*ProgramaContext) IsProgramaContext() {}

func NewProgramaContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramaContext {
	var p = new(ProgramaContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = VLangCherryParserRULE_programa

	return p
}

func (s *ProgramaContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramaContext) EOF() antlr.TerminalNode {
	return s.GetToken(VLangCherryParserEOF, 0)
}

func (s *ProgramaContext) AllDeclaracionGlobal() []IDeclaracionGlobalContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IDeclaracionGlobalContext); ok {
			len++
		}
	}

	tst := make([]IDeclaracionGlobalContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IDeclaracionGlobalContext); ok {
			tst[i] = t.(IDeclaracionGlobalContext)
			i++
		}
	}

	return tst
}

func (s *ProgramaContext) DeclaracionGlobal(i int) IDeclaracionGlobalContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDeclaracionGlobalContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDeclaracionGlobalContext)
}

func (s *ProgramaContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramaContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramaContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case VLangCherryVisitor:
		return t.VisitPrograma(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *VLangCherryParser) Programa() (localctx IProgramaContext) {
	localctx = NewProgramaContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, VLangCherryParserRULE_programa)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(65)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&4503599627370510) != 0 {
		{
			p.SetState(62)
			p.DeclaracionGlobal()
		}

		p.SetState(67)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(68)
		p.Match(VLangCherryParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IDeclaracionGlobalContext is an interface to support dynamic dispatch.
type IDeclaracionGlobalContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	DeclaracionStruct() IDeclaracionStructContext
	DeclaracionFuncion() IDeclaracionFuncionContext
	DeclaracionVariable() IDeclaracionVariableContext

	// IsDeclaracionGlobalContext differentiates from other interfaces.
	IsDeclaracionGlobalContext()
}

type DeclaracionGlobalContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDeclaracionGlobalContext() *DeclaracionGlobalContext {
	var p = new(DeclaracionGlobalContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = VLangCherryParserRULE_declaracionGlobal
	return p
}

func InitEmptyDeclaracionGlobalContext(p *DeclaracionGlobalContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = VLangCherryParserRULE_declaracionGlobal
}

func (*DeclaracionGlobalContext) IsDeclaracionGlobalContext() {}

func NewDeclaracionGlobalContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DeclaracionGlobalContext {
	var p = new(DeclaracionGlobalContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = VLangCherryParserRULE_declaracionGlobal

	return p
}

func (s *DeclaracionGlobalContext) GetParser() antlr.Parser { return s.parser }

func (s *DeclaracionGlobalContext) DeclaracionStruct() IDeclaracionStructContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDeclaracionStructContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDeclaracionStructContext)
}

func (s *DeclaracionGlobalContext) DeclaracionFuncion() IDeclaracionFuncionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDeclaracionFuncionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDeclaracionFuncionContext)
}

func (s *DeclaracionGlobalContext) DeclaracionVariable() IDeclaracionVariableContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDeclaracionVariableContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDeclaracionVariableContext)
}

func (s *DeclaracionGlobalContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DeclaracionGlobalContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DeclaracionGlobalContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case VLangCherryVisitor:
		return t.VisitDeclaracionGlobal(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *VLangCherryParser) DeclaracionGlobal() (localctx IDeclaracionGlobalContext) {
	localctx = NewDeclaracionGlobalContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, VLangCherryParserRULE_declaracionGlobal)
	p.SetState(73)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case VLangCherryParserSTRUCT:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(70)
			p.DeclaracionStruct()
		}

	case VLangCherryParserFUNC:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(71)
			p.DeclaracionFuncion()
		}

	case VLangCherryParserMUT, VLangCherryParserID:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(72)
			p.DeclaracionVariable()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IDeclaracionStructContext is an interface to support dynamic dispatch.
type IDeclaracionStructContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	STRUCT() antlr.TerminalNode
	ID() antlr.TerminalNode
	LLAIZQ() antlr.TerminalNode
	LLADER() antlr.TerminalNode
	AllCampoStruct() []ICampoStructContext
	CampoStruct(i int) ICampoStructContext

	// IsDeclaracionStructContext differentiates from other interfaces.
	IsDeclaracionStructContext()
}

type DeclaracionStructContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDeclaracionStructContext() *DeclaracionStructContext {
	var p = new(DeclaracionStructContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = VLangCherryParserRULE_declaracionStruct
	return p
}

func InitEmptyDeclaracionStructContext(p *DeclaracionStructContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = VLangCherryParserRULE_declaracionStruct
}

func (*DeclaracionStructContext) IsDeclaracionStructContext() {}

func NewDeclaracionStructContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DeclaracionStructContext {
	var p = new(DeclaracionStructContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = VLangCherryParserRULE_declaracionStruct

	return p
}

func (s *DeclaracionStructContext) GetParser() antlr.Parser { return s.parser }

func (s *DeclaracionStructContext) STRUCT() antlr.TerminalNode {
	return s.GetToken(VLangCherryParserSTRUCT, 0)
}

func (s *DeclaracionStructContext) ID() antlr.TerminalNode {
	return s.GetToken(VLangCherryParserID, 0)
}

func (s *DeclaracionStructContext) LLAIZQ() antlr.TerminalNode {
	return s.GetToken(VLangCherryParserLLAIZQ, 0)
}

func (s *DeclaracionStructContext) LLADER() antlr.TerminalNode {
	return s.GetToken(VLangCherryParserLLADER, 0)
}

func (s *DeclaracionStructContext) AllCampoStruct() []ICampoStructContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ICampoStructContext); ok {
			len++
		}
	}

	tst := make([]ICampoStructContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ICampoStructContext); ok {
			tst[i] = t.(ICampoStructContext)
			i++
		}
	}

	return tst
}

func (s *DeclaracionStructContext) CampoStruct(i int) ICampoStructContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICampoStructContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICampoStructContext)
}

func (s *DeclaracionStructContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DeclaracionStructContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DeclaracionStructContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case VLangCherryVisitor:
		return t.VisitDeclaracionStruct(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *VLangCherryParser) DeclaracionStruct() (localctx IDeclaracionStructContext) {
	localctx = NewDeclaracionStructContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, VLangCherryParserRULE_declaracionStruct)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(75)
		p.Match(VLangCherryParserSTRUCT)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(76)
		p.Match(VLangCherryParserID)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(77)
		p.Match(VLangCherryParserLLAIZQ)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(79)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = ((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&4521191817478144) != 0) {
		{
			p.SetState(78)
			p.CampoStruct()
		}

		p.SetState(81)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(83)
		p.Match(VLangCherryParserLLADER)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ICampoStructContext is an interface to support dynamic dispatch.
type ICampoStructContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Tipo() ITipoContext
	ID() antlr.TerminalNode

	// IsCampoStructContext differentiates from other interfaces.
	IsCampoStructContext()
}

type CampoStructContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCampoStructContext() *CampoStructContext {
	var p = new(CampoStructContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = VLangCherryParserRULE_campoStruct
	return p
}

func InitEmptyCampoStructContext(p *CampoStructContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = VLangCherryParserRULE_campoStruct
}

func (*CampoStructContext) IsCampoStructContext() {}

func NewCampoStructContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CampoStructContext {
	var p = new(CampoStructContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = VLangCherryParserRULE_campoStruct

	return p
}

func (s *CampoStructContext) GetParser() antlr.Parser { return s.parser }

func (s *CampoStructContext) Tipo() ITipoContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITipoContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITipoContext)
}

func (s *CampoStructContext) ID() antlr.TerminalNode {
	return s.GetToken(VLangCherryParserID, 0)
}

func (s *CampoStructContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CampoStructContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CampoStructContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case VLangCherryVisitor:
		return t.VisitCampoStruct(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *VLangCherryParser) CampoStruct() (localctx ICampoStructContext) {
	localctx = NewCampoStructContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, VLangCherryParserRULE_campoStruct)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(85)
		p.Tipo()
	}
	{
		p.SetState(86)
		p.Match(VLangCherryParserID)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IDeclaracionFuncionContext is an interface to support dynamic dispatch.
type IDeclaracionFuncionContext interface {
	antlr.ParserRuleContext
